# demand_forecasting

./: Makefile  README.md  environment.yml  pyproject.toml
demand_forecasting/: __init__.py  dataset.py  features.py  plots.py
demand_forecasting/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01-exploratory-data-analysis.ipynb
