[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "demand_forecasting"
version = "0.0.1"
description = "Approached to real life Demand Forecasting scenarios, with varying volume lined with seasonalities and anomalies due to events and activities in the product lifecycle."
authors = [
  { name = "dhaldar" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["demand_forecasting"]
force_sort_within_sections = true


